fixed whitespace overscroll issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,26 @@
-
-
- .App{
-  background: url("background.jpg");
+.App {
+  background: url("canvas.jpg");
   height: 100vh;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  }
+}
 
 /* contain */
 
+#links {
+  text-align: right;
+}
+#email {
+  text-align: right;
+}
 
-  #links{
-    text-align: right;
-    }
-    #email{
-    text-align: right;
-    }
+.test {
+  text-align: center;
+  background-color: aliceblue;
+}
 
-  .test{
-    text-align: center;
-background-color: aliceblue; 
- }
-
- #img{
-
+#img {
   position: absolute;
   right: 0%;
 }
